--- a/index.html
+++ b/index.html
@@ -638,10 +638,14 @@
                             <div class="row my-5 ">
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc35.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc35.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=3eLJpPHZLkg">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -658,10 +662,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc20.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc20.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=onBqrcCT_k0">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -679,10 +687,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc36.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc36.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=_qyw6LC5pnE">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -702,10 +714,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc38.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc38.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=sbVQ4cjitD0">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -723,10 +739,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc22.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc22.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=KLWOBI6uQ9s">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -744,10 +764,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc17.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc17.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=giWIr7U1deA">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -765,10 +789,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc18.png " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc18.png " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=rVt2lM1gKB8">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
@@ -786,10 +814,14 @@
                                 </div>
                                 <div class="col-3 showing__item ">
                                     <div class="showing__img ">
-                                        <img src="./img/sc15.jpg " alt=" ">
-                                        <div class="showing__overlay ">
-                                            <img src="./img/play-video.png " alt=" ">
-                                        </div>
+                                        <a href="#">
+                                            <img src="./img/sc15.jpg " alt=" ">
+                                            <div class="showing__overlay ">
+                                                <button id="btn-click" class="venobox" data-vbtype="video" data-href="https://www.youtube.com/watch?v=56pvThSsoSE">
+                                                    <img src="./img/play-video.png " alt=" ">
+                                                </button>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="showing__avgPoint_sapchieu ">
                                         <span>
